[tool.poetry]
name = "jthon"
version = "1.0.3"

description = "Some stuff to make JSON easier to work with"
authors = ["StroupBSlayen <29642143+stroupbslayen@users.noreply.github.com>", "ProbsJustin <jmksobieski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
